# StoryWeave

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  PROGRESS.md  README.md  SPEC.md  pyproject.toml  requirements-ml.txt
.github/workflows/: ci.yml
data/labels/: the-hollow-crown_ch01.json  the-hollow-crown_relations.json
data/samples/shadow-slave/: storyweave.toml
eval/: identity_eval.py  llm_gate.py  llm_probe.py  ner_eval.py  relex_eval.py
frontend/: DESIGN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Composer.tsx  GraphView.tsx  Library.tsx  SearchPanel.tsx  api.ts  cytoscape-cola.d.ts  main.tsx  ontology.ts  styles.css  types.ts
storyweave/: __init__.py  config.py
storyweave/api/: app.py  deps.py  jobs.py  schemas.py
storyweave/cli/: main.py
storyweave/db/: __init__.py  models.py  repository.py
storyweave/demo/: __init__.py  seed.py
storyweave/graph/: __init__.py  builder.py  serialize.py
storyweave/ingest/: __init__.py  cleaner.py  pipeline.py  splitter.py  work_config.py
storyweave/nlp/: __init__.py  cluster.py  coref.py  extractor.py  identity.py  labels.py  llm.py  metrics.py  pipeline.py  relex.py
storyweave/query/: __init__.py  fence.py
storyweave/search/: __init__.py  embedder.py  retriever.py  store.py
tests/: conftest.py  test_api.py  test_cleaner.py  test_cluster.py  test_coref.py  test_demo_seed.py  test_extract.py  test_fence.py  test_health.py  test_identity.py  test_ingest.py  test_jobs.py  test_llm.py  test_metrics.py  test_relate.py  test_relex.py  test_schema.py  test_search.py  test_smoke.py  test_splitter.py
(+6 files in other folders)
