[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "storyweave"
version = "0.1.0"
description = "A spoiler-aware knowledge engine for web novels."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
# Light dependencies only — these install into .venv (Python 3.14).
# Heavy NLP/ML deps live in requirements-ml.txt (.venv-ml, Python 3.12).
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "networkx>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
storyweave = "storyweave.cli.main:main"

[tool.setuptools.packages.find]
include = ["storyweave*"]

# --------------------------------------------------------------------------- #
# Tooling
# --------------------------------------------------------------------------- #

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["storyweave", "tests"]

[[tool.mypy.overrides]]
# ML libraries (GLiNER, torch, sentence-transformers) ship no stubs; ignored here
# so the light gate stays clean. These imports are lazy and live in .venv-ml.
module = [
    "gliner.*", "torch.*", "sentence_transformers.*", "chromadb.*", "faiss.*",
    "networkx.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
